--- a/app/views/periods/index.html.slim
+++ b/app/views/periods/index.html.slim
@@ -24,3 +24,8 @@
               = link_to toggle_status_period_path(period), class: 'ui labeled icon button', data: { method: :patch, remote: true } do
                 = semantic_icon('toggle on')
                 'Toggle Status
+        - unless @periods.any?
+          tr
+            td
+              = semantic_icon('warning sign')
+              'Data Empty
