--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     title Tabungan Pahala
 
     = csrf_meta_tags
+    = action_cable_meta_tag
     = stylesheet_link_tag :application, media: :all, data: { turbolinks_track: :reload }
     = javascript_include_tag :application, data: { turbolinks_track: :reload }
 
