enable label css

--- a/app/assets/stylesheets/_custom-semantic-ui.scss
+++ b/app/assets/stylesheets/_custom-semantic-ui.scss
@@ -8,7 +8,7 @@
 @import 'semantic-ui/elements/icon';
 //@import 'semantic-ui/elements/image';
 @import 'semantic-ui/elements/input';
-//@import 'semantic-ui/elements/label';
+@import 'semantic-ui/elements/label';
 //@import 'semantic-ui/elements/list';
 //@import 'semantic-ui/elements/loader';
 //@import 'semantic-ui/elements/rail';
